# nekRS-ML

./: .gitignore  .gitlab-ci.yml  BuildMeOnAurora  BuildMeOnCrux  BuildMeOnLocal  BuildMeOnPolaris  CMakeLists.txt  README.md  build.sh  build_and_install_polaris  module_config_polaris
.github/workflows/: ci.yml  lint.yml  trigger-gitlab-aurora.yml
.gitlab/: alcf.yml  aurora.yml  polaris.yml
cmake/: adios.cmake  fix_adios2_targets.cmake  gslib.cmake  nek5000.cmake  nekrs.cmake
config/: nrs.cmake
examples/: README.md  clean_all  setup_case.sh  setup_gnn.sh  setup_offline.sh  setup_online.sh
examples/MSR/: README  msr.oudf  msr.par  msr.udf  nekRS_msr.e2083427  nekRS_msr.e2083602
examples/MSR_smartsim/: MSR.udf  fail1.txt  fail2.txt  logfile  msr.par  msr.udf  ssim_driver_polaris.py  v22_msr.par
examples/MSR_workflow/: fail_1process.txt  fail_4processes.txt  launcher_ssim_driver_polaris.py  msr.par  msr.udf  nrsqsub_polaris  run_train_clustered.sh  single_ssim_driver_polaris.py  ssim_driver_polaris.py  trainer.py
examples/adios2_stream/: CMakeLists.txt  clean  client.py  gen_qsub_script  main.py  qsub_aurora  qsub_polaris  sim.cpp  trainer.py  trainer_orig.py
examples/adios2_stream/conf/: config.yaml
examples/debug/: input.box  nrsrun_aurora  nrsrun_polaris  run_1.sh  run_4.sh  tgv.re2
examples/ext_cyl_dgn/: README.md  clean  ext_cyl_3d.oudf  ext_cyl_3d.par  ext_cyl_3d.udf  nrsrun_aurora  (+2 more)
scripts/: setup_case  ssim_driver.py
tests/: README.md  core.py  nekrs.py  pyproject.toml  run.sh  sites.py  tests.py
tests/affinity/: aurora_ml.sh  aurora_nrs.sh
(+538 files in other folders)
